--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-build</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<scm>
@@ -21,9 +21,9 @@
 		<tag>HEAD</tag>
 	</scm>
 	<properties>
-		<spring-cloud-commons.version>3.0.0-SNAPSHOT</spring-cloud-commons.version>
-		<spring-cloud-gateway.version>3.0.0-SNAPSHOT</spring-cloud-gateway.version>
-		<spring-cloud-openfeign.version>3.0.0-SNAPSHOT</spring-cloud-openfeign.version>
+		<spring-cloud-commons.version>3.0.0</spring-cloud-commons.version>
+		<spring-cloud-gateway.version>3.0.0</spring-cloud-gateway.version>
+		<spring-cloud-openfeign.version>3.0.0</spring-cloud-openfeign.version>
 		<bintray.package>security</bintray.package>
 	</properties>
 	<modules>
